fix broken test for partial truncate, introduced in rev 1.118

PR kern/51601 kern/51602